# img2pdf-plus

./: .gitignore  LICENSE  README.md  TODOs.md  img2pdf.py  install.sh  lure-bin.sh  lure.sh  pyproject.toml  setup.cfg
.github/workflows/: build.yml
src/: setup.py
src/img2pdf/: main.py
