[metadata]
name = img2pdf-plus
version = 1.1.2
author = Furkan Baytekin (Elagoht)
author_email = furkanbaytekin@gmail.com
description = Merge images into one pdf file including useful optiıns via command line.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Elagoht/img2pdf
project_urls =
    Bug Tracker = https://github.com/Elagoht/img2pdf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    fonttools >=4.38.0
    fpdf2 >=2.6.0
    Pillow >=9.3.0
    python-magic-bin == 0.4.14;platform_system=='Windows'
    python-magic >=0.4.27;platform_system!='Windows'
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    img2pdf+ = img2pdf.main:main
